<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".screens.edit.EditSanPhamActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_marginEnd="6dp"
        android:text="@string/ten_dm"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/sp_danh_muc"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:id="@+id/layout_ma_san_pham"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="6dp"
            android:text="@string/ma_sp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_ma_san_pham"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:enabled="false" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="4dp"
        android:text="@string/ten_sp"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/product_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_ten_san_pham"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="4dp"
        android:text="@string/gia_sp"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/product_price">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_gia_san_pham"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="4dp"
        android:text="@string/so_luong"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/number_of_products">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_so_luong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="4dp"
        android:text="@string/don_vi_tinh"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/calculate_unit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_don_vi_tinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="4dp"
        android:text="@string/ngay_nhap"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/import_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_ngay_nhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_luu_item_sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/light_blue"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_huy_item_sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/pink_red"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>