<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".screens.edit.EditNhanVienActivity">

    <LinearLayout
        android:id="@+id/layout_ma_nhan_vien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="6dp"
            android:text="@string/ma_nv"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_ma_nhan_vien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:enabled="false" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="4dp"
        android:text="@string/ten_nv"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/employee_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_ten_nhan_vien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="4dp"
        android:text="@string/dia_chi_nv"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/employee_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_dia_chi_nv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="4dp"
        android:text="@string/chuc_vu_nv"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/sp_chuc_vu"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="4dp"
        android:text="@string/luong_nv"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/salary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_luong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="4dp"
        android:text="@string/mat_khau"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/employee_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_mat_khau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_luu_item_nv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/light_blue"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_huy_item_nv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/pink_red"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>