<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="6dp"
            android:gravity="top"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_xoa_hoa_don"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_delete_item"
                android:backgroundTint="@color/pink_red" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ma_hd"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_ma_hoa_don"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ma_hoa_don"
                    android:textStyle="bold"
                    android:textColor="@color/dark_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ten_nv"
                    android:textStyle="bold"
                    android:textColor="@color/dark_gray" />

                <TextView
                    android:id="@+id/tv_ten_nhan_vien"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ten_nhan_vien"
                    android:textStyle="bold"
                    android:textColor="@color/red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ten_kh"
                    android:textStyle="bold"
                    android:textColor="@color/dark_gray" />

                <TextView
                    android:id="@+id/tv_ten_khach_hang"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ten_khach_hang"
                    android:textStyle="bold"
                    android:textColor="@color/red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ngay_lap"
                    android:textStyle="bold"
                    android:textColor="@color/dark_gray" />

                <TextView
                    android:id="@+id/tv_ngay_lap"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ngay_example"
                    android:textStyle="bold"
                    android:textColor="@color/light_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tong_tien_column"
                    android:textStyle="bold"
                    android:textColor="@color/dark_gray" />

                <TextView
                    android:id="@+id/tv_tong_tien"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tong_tien"
                    android:textStyle="bold"
                    android:textColor="@color/light_gray" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>